# codeannex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
codeannex/: __main__.py  config.py  file_utils.py  fonts.py  highlight.py  pdf_builder.py  text_utils.py
codeannex/core/: config.py  pdf_builder.py
codeannex/interface/: cli.py
codeannex/io/: file_utils.py  git_utils.py
codeannex/renderer/: fonts.py  highlight.py  text_utils.py
tests/: conftest.py  test_emoji.py  test_file_management.py  test_fonts_dynamic.py  test_interactive.py  test_pdf_layout.py  test_summary_hierarchy.py  test_text_utils.py
tests/core/: test_large_summary.py  test_pdf_elements.py  test_pdf_layout.py  test_summary_hierarchy.py  test_summary_order.py
tests/interface/: test_cli_parsing.py  test_interactive.py  test_main_interrupt.py  test_wizard_coverage.py
tests/io_files/: test_file_management.py  test_file_utils_edge_cases.py  test_git_integration.py
tests/renderer/: test_emoji.py  test_fonts_dynamic.py  test_text_utils.py
