[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeannex"
version = "0.4.1"
description = "Generates a professional PDF source code annex with Smart Index, Images and Emoji support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["pdf", "source-code", "documentation", "annex", "reportlab", "emoji"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "reportlab>=4.0",
    "Pillow>=10.0",
    "Pygments>=2.16",
    "pdfminer.six>=20231228",
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7", "svglib>=1.5"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["should_*"]

[project.scripts]
codeannex = "codeannex.__main__:main"

[project.urls]
Repository = "https://github.com/tanhleno/codeannex"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeannex*"]
